force-app/main/default/objects/Fixture_Participation__c/Fixture_Participation__c.object-meta.xml
<CustomObject>
    <description>Junction object linking people to fixtures (replaces OpportunityContactRole)</description>
    <label>Fixture Participation</label>
    <nameField>
        <displayFormat>FP-{00000}</displayFormat>
        <label>Fixture Participation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fixture Participations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>