force-app/main/default/objects/Fixture_Participation__c/fields/Fixture__c.field-meta.xml
<CustomField>
    <fullName>Fixture__c</fullName>
    <label>Fixture</label>
    <referenceTo>Fixture__c</referenceTo>
    <relationshipLabel>Fixture Participations</relationshipLabel>
    <relationshipName>Fixture_Participations</relationshipName>
    <type>MasterDetail</type>
</CustomField>