force-app/main/default/objects/Fixture_Participation__c/fields/Minutes_Played__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Played__c</fullName>
    <label>Minutes Played</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>