force-app/main/default/objects/Fixture_Participation__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Fixture Participations</relationshipLabel>
    <relationshipName>Fixture_Participations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>