force-app/main/default/objects/Fixture_Participation__c/fields/Stats_Red_Cards__c.field-meta.xml
<CustomField>
    <fullName>Stats_Red_Cards__c</fullName>
    <label>Stats Red Cards</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>