force-app/main/default/objects/Fixture_Participation__c/fields/Stats_Tries__c.field-meta.xml
<CustomField>
    <fullName>Stats_Tries__c</fullName>
    <label>Stats Tries</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>