force-app/main/default/objects/Fixture_Participation__c/fields/Substitute__c.field-meta.xml
<CustomField>
    <fullName>Substitute__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Substitute</label>
    <type>Checkbox</type>
</CustomField>