force-app/main/default/objects/Fixture_Participation__c/fields/Substituted_Off_Minute__c.field-meta.xml
<CustomField>
    <fullName>Substituted_Off_Minute__c</fullName>
    <label>Substituted Off Minute</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>