force-app/main/default/objects/Fixture_Participation__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Team</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fixture Participations</relationshipLabel>
    <relationshipName>Fixture_Participations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>